--- a/i3/config
+++ b/i3/config
@@ -216,6 +216,10 @@ bar {
 		}
 }
 
+# Hide window title bar
+default_border pixel 1
+default_floating_border pixel 1
+
 #######################################################################
 # automatically start i3-config-wizard to offer the user to create a
 # keysym-based config which used their favorite modifier (alt or windows)
@@ -228,6 +232,8 @@ bar {
 #######################################################################
 exec i3-config-wizard
 exec --no-startup-id picom
+exec --no-startup-id powerkit
 
 # Wallpaper
 exec_always --no-startup-id feh --no-fehbg --bg-fill --randomize ~/Pictures/Wallpapers/
+		
